--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="Keywords" content="ESL Fun Games, Classroom Games, Printable Board Games, Powerpoint Games, ppt,Game Templates, Interactive Exercises, Online Activities, word games , Spelling Exercises, word puzzles, crossword puzzles, Daves esl café, Barry Fun English, Grammar Games, Online , Vocabulary  Games , TEFL, ESOL, for Kids, EFL, for Adults " />
     <meta name="description" content="DTM provides access to free educational support to every child around the globe. Our mobile learning curriculum consists of e-lessons that are targeted to improve English, computer literacy, typing and other skills. Visit us today to find educational games for kids. " />
 
-    <meta property="og:url"           content="https://games.dtml.org/games/" />
+    <meta property="og:url"           content="https://dtml.org/esl/" />
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="Free ESL Games" />
     <meta property="og:description"   content="Free Online ESL Games. " />
